# libsoundwave

./: .gitmodules  CMakeLists.txt
examples/src/: AudioDevice.cpp  AudioDevice.h  Main.cpp
include/libsoundwave/: Common.h
src/: FlacDecoder.cpp  ModplugDecoder.cpp  MusepackDecoder.cpp  OpusDecoder.cpp  VorbisDecoder.cpp  WavEncoder.cpp
